--- a/XOSkinWebApp/Views/Shared/_Layout.cshtml
+++ b/XOSkinWebApp/Views/Shared/_Layout.cshtml
@@ -131,7 +131,7 @@
                     <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Prices" asp-action="Index">Prices</a>
                   </li>
                   <li>
-                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="OrderFulFillment" asp-action="Index">Fulfillment</a>
+                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Shipment" asp-action="Index">Fulfillment</a>
                   </li>
                   <li>
                     <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Inventory" asp-action="Index">Inventory</a>
