--- a/XOSkinWebApp/Views/Shared/_Layout.cshtml
+++ b/XOSkinWebApp/Views/Shared/_Layout.cshtml
@@ -131,6 +131,9 @@
                     <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Prices" asp-action="Index">Prices</a>
                   </li>
                   <li>
+                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Orders" asp-action="Index">Orders</a>
+                  </li>
+                  <li>
                     <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Shipment" asp-action="Index">Fulfillment</a>
                   </li>
                   <li>
