--- a/XOSkinWebApp/Views/Shared/_Layout.cshtml
+++ b/XOSkinWebApp/Views/Shared/_Layout.cshtml
@@ -134,7 +134,7 @@
                     <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Orders" asp-action="Index">Orders</a>
                   </li>
                   <li>
-                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Shipment" asp-action="Index">Fulfillment</a>
+                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Shipment" asp-action="Index">Order Fulfillment</a>
                   </li>
                   <li>
                     <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Inventory" asp-action="Index">Inventory</a>
