--- a/XOSkinWebApp/Areas/Administration/Views/Shipment/Edit.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Shipment/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model XOSkinWebApp.Areas.Administration.Models.CheckoutViewModel
+﻿@model XOSkinWebApp.Areas.Administration.Models.ShipOutViewModel
 
 @{
   ViewData["Title"] = "Order Fulfillment";
@@ -6,12 +6,16 @@
 
 <h1>Order Fulfillment</h1>
 <h4>All Dates and Times UTC</h4>
+<h4>Shipment Status: @Model.ShipmentStatus</h4>
+<br />
+@Html.ActionLink("Back to List", "Index")
+<br /><br />
 <div class="container-fluid">
   <div class="row" style="width: 100%; margin-left: auto; margin-right: auto">
     <div class="col-sm-4">
-      <h4>Billing Address</h4>
+      <h4>Customer Address</h4>
       <div class="form-group">
-        <label class="control-label">Name on Credit Card</label>
+        <label class="control-label">Name</label>
         <input asp-for="BillingName" class="form-control" readonly />
       </div>
       <div class="form-group">
@@ -72,54 +76,35 @@
     </div>
     <div class="col-sm-4" style="font-weight: 500; line-height: 1.2; font-size: 1.5rem">
       <div style="text-align: right; margin-right: 40px">Order: @Html.Raw("#XO" + (Model.OrderId + 10000))</div>
+      <div style="text-align: right; margin-right: 40px">Order Placed: @Html.Raw(Model.BilledOn.ToShortDateString())</div>
       <div style="text-align: right; margin-right: 40px">
-        Carrier: <span style="font-weight: 100">
-          @Html.Raw(Model.CarrierName)
+        Promised Shipping: <span>
+          @Html.Raw(Model.ExpectedToShipOn.ToShortDateString())
         </span>
       </div>
       <div style="text-align: right; margin-right: 40px">
-        Shipping: <span style="font-weight: 100">
-          @Html.Raw(Model.ShippedOn.ToShortDateString())
-        </span>
-      </div>
-      <div style="text-align: right; margin-right: 40px">
-        Arrival: <span style="font-weight: 100">
+        Promised Arrival: <span>
           @Html.Raw(Model.ExpectedToArrive.ToShortDateString())
         </span>
       </div>
+      <div style="text-align: right; margin-right: 40px">
+        Order Shipped On: <span>
+          @Html.Raw(Model.ShippedOn == null ? String.Empty : ((DateTime)Model.ShippedOn).ToShortDateString())
+        </span>
+      </div>
       <br />
+      <div id="map"></div><br />
       <div style="text-align: right; margin-right: 40px">
-        Sub-Total: <span style="font-weight: 100">
-          $@Html.Raw(String.Format("{0:0.00}", Model.SubTotal))
-        </span>
+        <form asp-action="Edit">
+          <a class="btn-outline-dark btn" href="@Model.ShipEngineLabelUrl" target="_blank">Print Shipping Label</a>
+          <input type="submit" class="btn-outline-dark btn" value="Mark As Fulfilled" disabled="@(Model.ShipmentStatus.Equals("SHIPPED"))"/>
+          <input type="hidden" asp-for="OrderId" value="@Model.OrderId" />
+        </form>
       </div>
-      <div style="text-align: right; margin-right: 40px">
-        Taxes: <span style="font-weight: 100">
-          +$@Html.Raw(String.Format("{0:0.00}", Model.Taxes))
-        </span>
-      </div>
-      <div style="text-align: right; margin-right: 40px">
-        USPS Priority Mail: <span style="font-weight: 100">
-          +$@Html.Raw(String.Format("{0:0.00}", Model.ShippingCharges))
-        </span>
-      </div>
-      <div style="text-align: right; margin-right: 40px">
-        Code Discount: <span style="font-weight: 100">
-          -$@Html.Raw(String.Format("{0:0.00}", Model.CodeDiscount))
-        </span>
-      </div>
-      <div style="text-align: right; margin-right: 40px">
-        Coupon Discount: <span style="font-weight: 100">
-          -$@Html.Raw(String.Format("{0:0.00}", Model.CouponDiscount))
-        </span>
-      </div>
-      <div style="text-align: right; margin-right: 40px">Total: $@Html.Raw(String.Format("{0:0.00}", Model.Total))</div>
-      <br />
-      <div id="map"></div>
     </div>
   </div>
 </div>
-<h4>Items in Your Order</h4>
+<h4>Items to Ship With Order</h4>
 <table class="table table-responsive" id="OrderItems" style="margin-left: auto; margin-right: auto">
   <thead>
     <tr>
@@ -127,11 +112,10 @@
       <th class="text-nowrap">Product Name</th>
       <th>Description</th>
       <th>Quantity</th>
-      <th class="text-nowrap">Sub-Total</th>
     </tr>
   </thead>
   <tbody>
-    @foreach (ShoppingCartLineItemViewModel lineItem in Model.LineItem)
+    @foreach (XOSkinWebApp.Areas.Administration.Models.ShippingLineItemViewModel lineItem in Model.LineItem)
     {
       <tr>
         <td><img src="@lineItem.ImageSource" style="height: 100px; display: inline; float: left" /></td>
@@ -142,16 +126,10 @@
             @lineItem.Quantity
           </div>
         </td>
-        <td>@Html.DisplayFor(modelItem => lineItem.Total)</td>
       </tr>
     }
   </tbody>
 </table>
-<form asp-action="PlaceOrder" id="PlaceOrder">
-  <input type="hidden" asp-for="OrderId" value="@Model.OrderId" />
-  <input type="hidden" asp-for="ShippingLongitude" value="@Model.ShippingLongitude" id="shipping-longitude" />
-  <input type="hidden" asp-for="ShippingLatitude" value="@Model.ShippingLatitude" id="shipping-latitude" />
-</form>
 <script type="text/javascript">
   $(document).ready(function () {
     var table = $('#OrderItems').DataTable({
@@ -260,4 +238,21 @@
       map: map,
     });
   }
+</script>
+
+<script type="text/javascript">
+  $(document).ready(function () {
+    function highlight_pending() {
+      const page = document.body.innerHTML;
+      document.body.innerHTML = page.replace(new RegExp("PENDING", "g"), (match) => `<mark style="background-color: #FF7F7F">${match}</mark>`);
+    }
+
+    function highlight_shipped() {
+      const page = document.body.innerHTML;
+      document.body.innerHTML = page.replace(new RegExp("SHIPPED", "g"), (match) => `<mark style="background-color: #90EE90">${match}</mark>`);
+    }
+
+    highlight_pending();
+    highlight_shipped();
+  });
 </script>
