Pre NuGet Package update.

--- a/XOSkinWebApp/Views/Shared/_Layout.cshtml
+++ b/XOSkinWebApp/Views/Shared/_Layout.cshtml
@@ -128,6 +128,9 @@
                     <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Product" asp-action="Index">Products</a>
                   </li>
                   <li>
+                    <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Costs" asp-action="Index">Costs</a>
+                  </li>
+                  <li>
                     <a class="nav-link text-dark text-nowrap" asp-area="Administration" asp-controller="Prices" asp-action="Index">Prices</a>
                   </li>
                   <li>
