--- a/XOSkinWebApp/Areas/Administration/Views/Languages/Edit.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Languages/Edit.cshtml
@@ -15,7 +15,7 @@
       <input type="hidden" asp-for="Id" />
       <div class="form-group">
         <label class="control-label">Language Name</label>
-        <input asp-for="LanguageName" class="form-control" />
+        <input asp-for="LanguageName" class="form-control" id="LanguageName" />
         <span asp-validation-for="LanguageName" class="text-danger"></span>
       </div>
       <div class="form-group form-check">
