Index title naming.

--- a/XOSkinWebApp/Areas/Administration/Views/Questionnaires/Index.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Questionnaires/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<XOSkinWebApp.Areas.Administration.Models.QuestionnaireViewModel>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Questionnaires";
 }
 
 <h1>Questionnaires</h1>
