--- a/XOSkinWebApp/Areas/Administration/Views/Questions/Index.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Questions/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<XOSkinWebApp.Areas.Administration.Models.QuestionViewModel>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Questions";
 }
 
 <h1>Questions</h1>
