--- a/XOSkinWebApp/Views/Orders/Index.cshtml
+++ b/XOSkinWebApp/Views/Orders/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<XOSkinWebApp.Models.OrderViewModel>
 
 @{
-  ViewData["Title"] = "Track Orders";
+  ViewData["Title"] = "Your Orders";
 }
 
 <div class="text-center">
