--- a/XOSkinWebApp/Views/ProductRecommendation/Index.cshtml
+++ b/XOSkinWebApp/Views/ProductRecommendation/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ProductViewModel>
 
 @{
-  ViewData["Title"] = "Product Recommendation";
+  ViewData["Title"] = "Product Recommendations";
 }
 <div class="text-sm-center">
   <h1 class="display-4">For Your <br />Skin</h1>
