--- a/XOSkinWebApp/Views/ShoppingCart/Index.cshtml
+++ b/XOSkinWebApp/Views/ShoppingCart/Index.cshtml
@@ -2,7 +2,7 @@
 @{ decimal? total = 0.00M; }
 
 @{
-  ViewData["Title"] = "Shopping Cart";
+  ViewData["Title"] = "Your Shopping Cart";
 }
 
 <div class="text-center">
