Shared layout opacity fix.

--- a/XOSkinWebApp/Areas/Administration/Views/Roles/Index.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Roles/Index.cshtml
@@ -3,7 +3,7 @@
 @model IEnumerable<IdentityRole>
 
 @{
-  ViewData["Title"] = "Roles";
+  ViewData["Title"] = "Application Roles";
 }
 
 <h1>Application Roles</h1>
