--- a/XOSkinWebApp/Areas/Administration/Views/Shipment/Index.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Shipment/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<XOSkinWebApp.Areas.Administration.Models.ShipmentViewModel>
 
 @{
-    ViewData["Title"] = "Shipments";
+    ViewData["Title"] = "Order Fulfillment";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <h1>Order Fulfillment</h1>
