--- a/XOSkinWebApp/Areas/Administration/Views/Orders/Edit.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Orders/Edit.cshtml
@@ -1,15 +1,18 @@
-﻿@model CheckoutViewModel
+﻿@model XOSkinWebApp.Areas.Administration.Models.CheckoutViewModel
 
 @{
-  ViewData["Title"] = "Your Order Confirmation";
+  ViewData["Title"] = "Edit Order";
 }
 
-<div class="text-center">
-  <h1 class="display-4">Thank you for<br />Your Order!</h1>
-  @Html.Raw(ViewData["OrderConfirmation.WelcomeText"])
-</div>
+<h1>Edit Order</h1>
+<h4>Status: @Model.FulfillmentStatus</h4>
+
 <p>
-  <div style="display: inline"><a class="btn-outline-dark btn" asp-area="" asp-controller="Orders" asp-action="Index">View Your Orders</a></div>
+  <div style="display: inline">
+    <a asp-controller="Orders" asp-action="Index">
+      Back to List
+    </a>
+  </div>
 </p>
 <br />
 <div class="container-fluid">
@@ -77,26 +80,48 @@
       </div>
     </div>
     <div class="col-sm-4" style="font-weight: 500; line-height: 1.2; font-size: 1.5rem">
+      <div style="text-align: right; margin-right: 40px">Order: @Html.Raw("#XO" + (Model.OrderId + 10000))</div>
       <div style="text-align: right; margin-right: 40px">
-        Order: @Html.Raw("#XO" + (Model.OrderId + 10000))</div>
+        Shipping: <span style="font-weight: 100">
+          @Html.Raw(Model.ShippedOn.ToShortDateString())
+        </span>
+      </div>
       <div style="text-align: right; margin-right: 40px">
-        Shipping: <span style="font-weight: 100">@Html.Raw(Model.ShippedOn.ToShortDateString())</span></div>
+        Arrival: <span style="font-weight: 100">
+          @Html.Raw(Model.ExpectedToArrive.ToShortDateString())
+        </span>
+      </div>
       <div style="text-align: right; margin-right: 40px">
-        Arrival: <span style="font-weight: 100">@Html.Raw(Model.ExpectedToArrive.ToShortDateString())</span></div>
+        Sub-Total: <span style="font-weight: 100">
+          $@Html.Raw(String.Format("{0:0.00}", Model.SubTotal))
+        </span>
+      </div>
       <div style="text-align: right; margin-right: 40px">
-        Sub-Total: <span style="font-weight: 100">$@Html.Raw(String.Format("{0:0.00}", Model.SubTotal))</span></div>
+        Taxes: <span style="font-weight: 100">
+          +$@Html.Raw(String.Format("{0:0.00}", Model.Taxes))
+        </span>
+      </div>
       <div style="text-align: right; margin-right: 40px">
-        Taxes: <span style="font-weight: 100">+$@Html.Raw(String.Format("{0:0.00}", Model.Taxes))</span></div>
+        USPS Priority Mail: <span style="font-weight: 100">
+          +$@Html.Raw(String.Format("{0:0.00}", Model.ShippingCharges))
+        </span>
+      </div>
       <div style="text-align: right; margin-right: 40px">
-        USPS Priority Mail: <span style="font-weight: 100">+$@Html.Raw(String.Format("{0:0.00}", Model.ShippingCharges))</span></div>
+        Code Discount: <span style="font-weight: 100">
+          -$@Html.Raw(String.Format("{0:0.00}", Model.CodeDiscount))
+        </span>
+      </div>
       <div style="text-align: right; margin-right: 40px">
-        Code Discount: <span style="font-weight: 100">-$@Html.Raw(String.Format("{0:0.00}", Model.CodeDiscount))</span></div>
+        Coupon Discount: <span style="font-weight: 100">
+          -$@Html.Raw(String.Format("{0:0.00}", Model.CouponDiscount))
+        </span>
+      </div>
+      <div style="text-align: right; margin-right: 40px">Total: $@Html.Raw(String.Format("{0:0.00}", Model.Total))</div>
       <div style="text-align: right; margin-right: 40px">
-        Coupon Discount: <span style="font-weight: 100">-$@Html.Raw(String.Format("{0:0.00}", Model.CouponDiscount))</span></div>
-      <div style="text-align: right; margin-right: 40px">
-        Total: $@Html.Raw(String.Format("{0:0.00}", Model.Total))</div>
-      <div style="text-align: right; margin-right: 40px">
-        Tracking Number: <span style="font-weight: 100">@Html.Raw(Model.TrackingNumber)</span></div>
+        Tracking Number: <span style="font-weight: 100">
+          @Html.Raw(Model.TrackingNumber)
+        </span>
+      </div>
       <br />
       <div id="map"></div>
     </div>
@@ -114,7 +139,7 @@
     </tr>
   </thead>
   <tbody>
-    @foreach (ShoppingCartLineItemViewModel lineItem in Model.LineItem)
+    @foreach (XOSkinWebApp.Areas.Administration.Models.ShoppingCartLineItemViewModel lineItem in Model.LineItem)
     {
       <tr>
         <td><img src="@lineItem.ImageSource" style="height: 100px; display: inline; float: left" /></td>
@@ -135,7 +160,6 @@
   <input type="hidden" asp-for="ShippingLongitude" value="@Model.ShippingLongitude" id="shipping-longitude" />
   <input type="hidden" asp-for="ShippingLatitude" value="@Model.ShippingLatitude" id="shipping-latitude" />
 </form>
-
 <script type="text/javascript">
   $(document).ready(function () {
     var table = $('#OrderItems').DataTable({
